--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typescript-starter",
-  "version": "1.0.0",
+  "name": "qrdude",
+  "version": "0.1.0",
   "description": "This is a QR encode and decode tool",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -52,7 +52,10 @@
     "node": ">=8.9"
   },
   "dependencies": {
-    "sha.js": "^2.4.10"
+    "@types/validator": "^9.4.0",
+    "validate": "^4.0.0",
+    "validator": "^9.4.1",
+    "validator.ts": "^0.2.2"
   },
   "devDependencies": {
     "ava": "^1.0.0-beta.3",
