--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
-  "repository": "https://github.com/raynerd/qrdude",
+  "repository": "https://github.com/raynerpupo/qrdude",
   "license": "MIT",
-  "keywords": [],
+  "keywords": ["qr"],
   "scripts": {
     "info": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
