--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "qrdude",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "This is a QR encode and decode tool",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/raynerpupo/qrdude",
   "license": "MIT",
-  "keywords": ["qr"],
+  "keywords": [
+    "qr"
+  ],
   "scripts": {
     "info": "npm-scripts-info",
     "build": "run-s clean && run-p build:*",
